# agent-rag

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  evaluation.md  ingestion-workflow.md  ocr-proofreading.md  prompting.md  source-schema.md
docs/adr/: 0001-elevenlabs-first-targeting.md
docs/plans/: 2026-03-13-agent-rag-bootstrap.md  2026-03-13-export-targets-elevenlabs-bedrock.md  2026-03-13-parley-remaining-ingestion.md
scripts/: gemini_image_ocr_batch.py  gemini_pdf_ocr_batch.py
src/agent_rag/: __init__.py  chunking.py  cli.py  export_targets.py  models.py  ocr_filter.py  ocr_proofreader.py  prompt_templates.py  subject_pack.py
subjects/parley-p-pratt/: aliases.yaml  notes.md  profile.yaml  sources.yaml
subjects/parley-p-pratt/clean/primary/: autobiography-chapter-01.md  autobiography-chapter-02.md  autobiography-chapter-03.md  autobiography-chapter-04.md  autobiography-chapter-05.md  autobiography-chapter-06.md  autobiography-chapter-07.md  autobiography-chapter-08.md  autobiography-chapter-09.md  autobiography-chapter-10.md  autobiography-chapter-11.md  autobiography-chapter-12.md  autobiography-chapter-13.md  autobiography-chapter-14.md  autobiography-chapter-15.md  autobiography-chapter-16.md  autobiography-chapter-17.md  autobiography-chapter-18.md  autobiography-chapter-19.md  (+104 more)
subjects/parley-p-pratt/exports/: chunks.jsonl  corpus.jsonl  manifest.json
subjects/parley-p-pratt/raw/: README.md
tests/: test_chunking.py  test_cli.py  test_ocr_filter.py  test_ocr_proofreader.py  test_subject_pack.py
(+216 files in other folders)
