[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-rag"
version = "0.1.0"
description = "Tools and pipelines for building provenance-aware RAG corpora from historical writings."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Mormon Transhumanist Association"},
]
dependencies = [
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/MormonTranshumanistAssociation/agent-rag"
Repository = "https://github.com/MormonTranshumanistAssociation/agent-rag"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
agent-rag = "agent_rag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
